--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Simple calculation",
   "main": "src/index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@gksingh"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
